@startuml 01 - Class Diagram: Auth Module

skinparam classBackgroundColor #EEF2FF
skinparam classBorderColor #6366F1
skinparam classArrowColor #374151
skinparam roundcorner 10
skinparam classFontSize 12

title Class Diagram: Auth Module

package "com.iting.jobportal.auth" {

  package "entity" {

    enum Role {
      CANDIDATE
      EMPLOYER
      ADMIN
    }

    enum AccountStatus {
      PENDING
      ACTIVE
      BANNED
      INACTIVE
    }

    class Account {
      - id: Long
      - email: String
      - passwordHash: String
      - role: Role
      - status: AccountStatus
      - lastLoginAt: LocalDateTime
      - createdAt: LocalDateTime
      - updatedAt: LocalDateTime
      + getAuthorities(): Collection<GrantedAuthority>
    }

    class RefreshToken {
      - id: Long
      - tokenId: String
      - userId: Long
      - email: String
      - token: String
      - expiryDate: LocalDateTime
      - isUsed: Boolean
      - isRevoked: Boolean
      - deviceInfo: String
      - ipAddress: String
      - createdAt: LocalDateTime
      - updatedAt: LocalDateTime
    }

    class OtpCode {
      - id: Long
      - email: String
      - code: String
      - expiryTime: LocalDateTime
      - isVerification: Boolean
    }

    class PasswordResetToken {
      - id: Long
      - token: String
      - expiresAt: LocalDateTime
      - used: Boolean
      - createdAt: LocalDateTime
      - updatedAt: LocalDateTime
    }

    class BanHistory {
      - id: Long
      - reason: String
      - bannedAt: LocalDateTime
      - expiredAt: LocalDateTime
      - isActive: Boolean
    }
  }

  package "dto" {
    class RegisterRequest {
      + email: String
      + password: String
      + fullName: String
    }

    class LoginRequest {
      + email: String
      + password: String
    }

    class LoginResponse {
      + accessToken: String
      + refreshToken: String
      + role: String
      + userId: Long
    }

    class UserMeResponse {
      + id: Long
      + email: String
      + role: String
      + fullName: String
      + avatarUrl: String
    }
  }

  package "service" {
    interface AuthService {
      + login(request: LoginRequest): LoginResponse
      + loginWithGoogle(tokenId: String): LoginResponse
      + register(request: RegisterRequest): Account
      + verifyOtp(email: String, code: String): void
      + resendOtp(email: String): void
      + changePassword(accountId: Long, request: ChangePasswordRequest): void
      + forgotPassword(request: ForgotPasswordRequest): void
      + resetPassword(request: ResetPasswordRequest): void
      + getMeResponse(accountId: Long): UserMeResponse
    }

    class AuthServiceImpl {
      - accountRepository: AccountRepository
      - jwtTokenUtil: JwtTokenUtil
      - passwordEncoder: PasswordEncoder
      - emailService: EmailService
      - refreshTokenRepository: RefreshTokenRepository
      - otpCodeRepository: OtpCodeRepository
    }
  }

  package "controller" {
    class AuthController {
      - authService: AuthService
      + register(request: RegisterRequest): ResponseEntity
      + verifyOtp(body: Map): ResponseEntity
      + resendOtp(body: Map): ResponseEntity
      + login(request: LoginRequest): ResponseEntity
      + googleLogin(request: GoogleLoginRequest): ResponseEntity
      + changePassword(accountId: Long, request: ChangePasswordRequest): ResponseEntity
      + forgotPassword(request: ForgotPasswordRequest): ResponseEntity
      + resetPassword(request: ResetPasswordRequest): ResponseEntity
      + getMe(accountId: Long): ResponseEntity
    }
  }

  package "security" {
    class JwtTokenUtil {
      - jwtSecret: String
      - jwtExpiration: Long
      + generateAccessToken(account: Account): String
      + generateRefreshToken(account: Account): String
      + validateToken(token: String): boolean
      + getUserIdFromToken(token: String): Long
      + getEmailFromToken(token: String): String
    }

    class JwtAuthFilter {
      - jwtTokenUtil: JwtTokenUtil
      - authUserDetailsService: AuthUserDetailsService
      + doFilterInternal(request, response, chain): void
    }
  }
}

' Relationships
Account "1" *-- "many" RefreshToken : has >
Account "1" *-- "many" PasswordResetToken : has >
Account "1" *-- "many" BanHistory : targetAccount >
Account "1" -- "many" BanHistory : adminAccount >
AuthServiceImpl ..|> AuthService : implements
AuthController --> AuthService : uses
JwtAuthFilter --> JwtTokenUtil : uses
AuthServiceImpl --> JwtTokenUtil : uses

note right of Account
  Implements UserDetails
  (Spring Security)
end note

@enduml
